--- a/2_Topic_Modeling.ipynb
+++ b/2_Topic_Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -32,34 +32,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Charlotte/anaconda/lib/python3.5/site-packages/IPython/core/interactiveshell.py:2723: DtypeWarning: Columns (2,5,8,18,27,30,50,61,63,79,86,94) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n",
-      "/Users/Charlotte/anaconda/lib/python3.5/site-packages/IPython/core/interactiveshell.py:2723: DtypeWarning: Columns (0,1,2,3,5,8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "user = pd.read_csv('csv/new_user.csv')\n",
-    "business = pd.read_csv('csv/new_business.csv')\n",
-    "review = pd.read_csv('csv/restaurant_review.csv')\n",
-    "tip = pd.read_csv('csv/tip.csv')\n",
-    "top_restaurant = pd.read_csv('csv/high_reviews_restaurant.csv')"
+    "user = pd.read_pickle('data/user')\n",
+    "business =pd.read_pickle('data/business')\n",
+    "review = pd.read_pickle('data/review')\n",
+    "# top_restaurant = pd.read_csv('updated/high_reviews_restaurant.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -73,64 +61,68 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>user_id</th>\n",
        "      <th>review_id</th>\n",
        "      <th>text</th>\n",
-       "      <th>votes_cool</th>\n",
+       "      <th>votes.cool</th>\n",
        "      <th>business_id</th>\n",
-       "      <th>votes_funny</th>\n",
+       "      <th>votes.funny</th>\n",
        "      <th>stars</th>\n",
        "      <th>date</th>\n",
-       "      <th>votes_useful</th>\n",
+       "      <th>type</th>\n",
+       "      <th>votes.useful</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3873428</th>\n",
-       "      <td>2685064</td>\n",
+       "      <th>2685064</th>\n",
        "      <td>nELVJlkX8T0mUAArSPSJxw</td>\n",
        "      <td>vwmqHxxmy9rEAwhbkLXmnQ</td>\n",
        "      <td>he stood in the face of a 25 star biz and brav...</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>DH2Ujt_hwcMBIz8VvCb0Lg</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
        "      <td>2016-04-30</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>review</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3873429</th>\n",
-       "      <td>2685065</td>\n",
+       "      <th>2685065</th>\n",
        "      <td>maAimqEE4G483rtifPKlYg</td>\n",
        "      <td>DDmiTM_jMhshjYkXk5Sshg</td>\n",
        "      <td>2 pm monday afternoon out of sour cream ridicu...</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>DH2Ujt_hwcMBIz8VvCb0Lg</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>2016-07-11</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>review</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Unnamed: 0                 user_id               review_id  \\\n",
-       "3873428    2685064  nELVJlkX8T0mUAArSPSJxw  vwmqHxxmy9rEAwhbkLXmnQ   \n",
-       "3873429    2685065  maAimqEE4G483rtifPKlYg  DDmiTM_jMhshjYkXk5Sshg   \n",
+       "                        user_id               review_id  \\\n",
+       "2685064  nELVJlkX8T0mUAArSPSJxw  vwmqHxxmy9rEAwhbkLXmnQ   \n",
+       "2685065  maAimqEE4G483rtifPKlYg  DDmiTM_jMhshjYkXk5Sshg   \n",
        "\n",
-       "                                                      text  votes_cool  \\\n",
-       "3873428  he stood in the face of a 25 star biz and brav...         4.0   \n",
-       "3873429  2 pm monday afternoon out of sour cream ridicu...         0.0   \n",
+       "                                                      text  votes.cool  \\\n",
+       "2685064  he stood in the face of a 25 star biz and brav...           4   \n",
+       "2685065  2 pm monday afternoon out of sour cream ridicu...           0   \n",
        "\n",
-       "                    business_id  votes_funny  stars        date  votes_useful  \n",
-       "3873428  DH2Ujt_hwcMBIz8VvCb0Lg          5.0    3.0  2016-04-30           4.0  \n",
-       "3873429  DH2Ujt_hwcMBIz8VvCb0Lg          0.0    1.0  2016-07-11           0.0  "
+       "                    business_id  votes.funny  stars        date    type  \\\n",
+       "2685064  DH2Ujt_hwcMBIz8VvCb0Lg            5      3  2016-04-30  review   \n",
+       "2685065  DH2Ujt_hwcMBIz8VvCb0Lg            0      1  2016-07-11  review   \n",
+       "\n",
+       "         votes.useful  \n",
+       "2685064             4  \n",
+       "2685065             0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -149,10 +141,10 @@
     {
      "data": {
       "text/plain": [
-       "3873430"
+       "1630712"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,13 +155,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 loops, best of 3: 105 ms per loop\n"
+     ]
+    }
+   ],
    "source": [
-    "# Counter(review.business_id)"
+    "%timeit Counter(review.business_id)"
    ]
   },
   {
@@ -208,22 +208,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26629\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('2e2e7WgqU1BnpxmQL5jbfw', 4103),\n",
+       " ('aGbjLWzcrnEx2ZmMCFm3EA', 4149),\n",
+       " ('zt1TpTuJ6y9n551sw9TaEg', 4333),\n",
+       " ('sIyHTizqAiGu12XMLX3N3g', 4531),\n",
+       " ('4bEjOyTaDG24SY5TxsaUNQ', 5558)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# review_count = Counter(review['business_id']) # number of unique restaurants\n",
-    "# print(len(review_count))\n",
-    "# top_restaurant = [(k,v)for k,v in review_count.items() if v > 300]#number of restaurants that have more than 300 reviews\n",
-    "# sorted_by_count = sorted(top_restaurant, key=lambda tup: tup[1])\n",
-    "# sorted_by_count[-5:]"
+    "review_count = Counter(review['business_id']) # number of unique restaurants\n",
+    "print(len(review_count))\n",
+    "top_restaurant = [(k,v)for k,v in review_count.items() if v > 300]#number of restaurants that have more than 300 reviews\n",
+    "sorted_by_count = sorted(top_restaurant, key=lambda tup: tup[1])\n",
+    "sorted_by_count[-5:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -241,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -266,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -291,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -303,7 +325,7 @@
        "3873430"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -356,7 +378,7 @@
        "1           1  7WGBi29_vj_7RcPVxpLNHA           301"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,11 +398,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "expected sequence object with len >= 0 or a single integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-15dd4f21418b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrating_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mshape\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: expected sequence object with len >= 0 or a single integer"
+     ]
+    }
+   ],
    "source": [
     "rating_matrix = np.zeros( shape )"
    ]
