--- a/1_EDA.ipynb
+++ b/1_EDA.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -134,7 +134,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>date</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ZxdojCZgZhw36xuSGaryRg</td>\n",
+       "      <td>Pizza is garbage. Hoagies are excellent.</td>\n",
+       "      <td>5UmKMjUEUNdYWqANhGckJw</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2016-07-17</td>\n",
+       "      <td>tip</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-6rEfobYjMxpUWLNxszaxQ</td>\n",
+       "      <td>Don't waste your time.</td>\n",
+       "      <td>cE27W9VPgO88Qxe4ol6y_g</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2013-04-18</td>\n",
+       "      <td>tip</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  user_id                                      text  \\\n",
+       "0  ZxdojCZgZhw36xuSGaryRg  Pizza is garbage. Hoagies are excellent.   \n",
+       "1  -6rEfobYjMxpUWLNxszaxQ                    Don't waste your time.   \n",
+       "\n",
+       "              business_id  likes        date type  \n",
+       "0  5UmKMjUEUNdYWqANhGckJw      0  2016-07-17  tip  \n",
+       "1  cE27W9VPgO88Qxe4ol6y_g      0  2013-04-18  tip  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tip.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -158,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +290,8 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -345,6 +411,140 @@
    "source": [
     "user.tail(2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>votes_cool</th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>votes_funny</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>date</th>\n",
+       "      <th>type</th>\n",
+       "      <th>votes_useful</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PUFPaY9KxDAcGqfsorJp3Q</td>\n",
+       "      <td>Ya85v4eqdd6k9Od8HbQjyA</td>\n",
+       "      <td>Mr Hoagie is an institution. Walking in, it do...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5UmKMjUEUNdYWqANhGckJw</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2012-08-01</td>\n",
+       "      <td>review</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Iu6AxdBYGR4A0wspR9BYHA</td>\n",
+       "      <td>KPvLNJ21_4wbYNctrOwWdQ</td>\n",
+       "      <td>Excellent food. Superb customer service. I mis...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5UmKMjUEUNdYWqANhGckJw</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2014-02-13</td>\n",
+       "      <td>review</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  user_id               review_id  \\\n",
+       "0  PUFPaY9KxDAcGqfsorJp3Q  Ya85v4eqdd6k9Od8HbQjyA   \n",
+       "1  Iu6AxdBYGR4A0wspR9BYHA  KPvLNJ21_4wbYNctrOwWdQ   \n",
+       "\n",
+       "                                                text  votes_cool  \\\n",
+       "0  Mr Hoagie is an institution. Walking in, it do...           0   \n",
+       "1  Excellent food. Superb customer service. I mis...           0   \n",
+       "\n",
+       "              business_id  votes_funny  stars        date    type  \\\n",
+       "0  5UmKMjUEUNdYWqANhGckJw            0      4  2012-08-01  review   \n",
+       "1  5UmKMjUEUNdYWqANhGckJw            0      5  2014-02-13  review   \n",
+       "\n",
+       "   votes_useful  \n",
+       "0             0  \n",
+       "1             0  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "453"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(review.text[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
