--- a/3_Classification-On-User-Info-Copy1.ipynb
+++ b/3_Classification-On-User-Info-Copy1.ipynb
@@ -57,95 +57,7 @@
    "source": [
     "user = pd.read_pickle('data/user')\n",
     "business =pd.read_pickle('data/business')\n",
-    "review = pd.read_pickle('data/review')\n",
-    "# top_restaurant = pd.read_csv('updated/high_reviews_restaurant.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 214,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['user_id', 'review_id', 'text', 'votes_cool', 'business_id',\n",
-       "       'votes_funny', 'stars', 'date', 'votes_useful'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 214,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "review.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['index', 'yelping_since', 'compliments_plain', 'review_count',\n",
-       "       'compliments_cute', 'compliments_writer', 'fans', 'compliments_note',\n",
-       "       'compliments_hot', 'compliments_cool', 'compliments_profile',\n",
-       "       'average_stars', 'compliments_more', 'elite', 'name', 'user_id',\n",
-       "       'votes_cool', 'compliments_list', 'votes_funny', 'compliments_photos',\n",
-       "       'compliments_funny', 'votes_useful', 'elite_year', 'elite_since',\n",
-       "       'year_before_elite'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 183,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "user.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 215,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# business.city.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 216,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# business.city.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 217,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# business.columns"
+    "review = pd.read_pickle('data/review')"
    ]
   },
   {
@@ -155,7 +67,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "user.head()"
+   ]
   },
   {
    "cell_type": "code",
