--- a/4_Text-Classfication.ipynb
+++ b/4_Text-Classfication.ipynb
@@ -4,17 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "GOAL:\n",
+    "GOAL: Using User Reviews to classify user status \n",
     "\n",
-    "Clustering: LDA and NMG for Topic Modeling\n",
-    "Classification: Random Forest, Continuous Data - Classifiy Elite Status -- Find people who are qualified to be elite but are not. \n",
-    "Regression: \n",
+    "Algorithms: \n",
+    "    - Multinomial NB\n",
+    "    -Naive Bayes\n",
+    "    \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -26,6 +27,16 @@
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Charlotte/anaconda/lib/python3.5/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
+      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n",
+      "/Users/Charlotte/anaconda/lib/python3.5/site-packages/sklearn/grid_search.py:43: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. This module will be removed in 0.20.\n",
+      "  DeprecationWarning)\n"
+     ]
     }
    ],
    "source": [
@@ -34,16 +45,33 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import re\n",
-    "from collections import Counter\n",
-    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
-    "from sklearn.decomposition import NMF\n",
-    "from sklearn.decomposition.online_lda import LatentDirichletAllocation\n",
     "import string\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from nltk.tokenize import word_tokenize\n",
+    "from collections import Counter\n",
+    "from collections import defaultdict\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk import word_tokenize\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "\n",
     "from nltk.stem.porter import PorterStemmer\n",
     "from nltk.stem.snowball import SnowballStemmer\n",
-    "from nltk.stem.wordnet import WordNetLemmatizer"
+    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "\n",
+    "\n",
+    "# Evaluation - Optimization Tools\n",
+    "from sklearn.pipeline import Pipeline,make_pipeline\n",
+    "from sklearn.model_selection import cross_val_score,train_test_split\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_curve, auc, classification_report\n",
+    "from sklearn.preprocessing import normalize, scale, StandardScaler, Normalizer\n",
+    "from sklearn.grid_search import GridSearchCV\n",
+    "\n",
+    "# Classification Algorithms\n",
+    "from sklearn.naive_bayes import MultinomialNB, GaussianNB\n",
+    "from sklearn.linear_model import LogisticRegression,SGDClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier,AdaBoostClassifier\n"
    ]
   },
   {
@@ -56,8 +84,187 @@
    "outputs": [],
    "source": [
     "user = pd.read_pickle('data/user')\n",
-    "business =pd.read_pickle('data/business')\n",
-    "review = pd.read_pickle('data/review')"
+    "review = pd.read_pickle('data/review')\n",
+    "# business =pd.read_pickle('data/business')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>review_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>votes_cool</th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>votes_funny</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>date</th>\n",
+       "      <th>votes_useful</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>83ctfLRkC7roE1qOy0IuhA</td>\n",
+       "      <td>FNnXv7iKidwPhu7dRgddsg</td>\n",
+       "      <td>boy miss primate bros remember going packing d...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NeUf9FyCCIN4MEseNyqkXQ</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2006-04-28</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>57ghQ4PJbGy-3LP7zSVnEg</td>\n",
+       "      <td>odTD3ohAIP-i-hHqcUkd3A</td>\n",
+       "      <td>pastrami cole slaw fry oh id heard hype place ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NeUf9FyCCIN4MEseNyqkXQ</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2007-09-24</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  user_id               review_id  \\\n",
+       "0  83ctfLRkC7roE1qOy0IuhA  FNnXv7iKidwPhu7dRgddsg   \n",
+       "1  57ghQ4PJbGy-3LP7zSVnEg  odTD3ohAIP-i-hHqcUkd3A   \n",
+       "\n",
+       "                                                text  votes_cool  \\\n",
+       "0  boy miss primate bros remember going packing d...           0   \n",
+       "1  pastrami cole slaw fry oh id heard hype place ...           1   \n",
+       "\n",
+       "              business_id  votes_funny  stars        date  votes_useful  \n",
+       "0  NeUf9FyCCIN4MEseNyqkXQ            0      4  2006-04-28             0  \n",
+       "1  NeUf9FyCCIN4MEseNyqkXQ            1      4  2007-09-24             1  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "elite_userid = user['user_id'].ix[user['elite_status'] == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "review['elite_status'] = np.where(review['user_id'].isin(elite_userid), 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "X = review['text']\n",
+    "y = review['elite_status']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "vectorizer = TfidfVectorizer()\n",
+    "vect_X_train = vectorizer.fit_transform(X_train)\n",
+    "vect_X_test = vectorizer.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def fit_model(model,X_train,y_train,X_test,y_test):\n",
+    "    \"Fit Model --- Return Evaluation Metrics\"\n",
+    "    \n",
+    "    model = model.fit(X_train, y_train)\n",
+    "    train_pred = model.predict(X_train)\n",
+    "    test_pred = model.predict(X_test)\n",
+    "\n",
+    "    print(str(model).split('(')[0],':')\n",
+    "    print('Train | Accuracy:', round(accuracy_score(y_train, train_pred),3),\n",
+    "          '| Recall',round(recall_score(y_train, train_pred),3),\n",
+    "          '| Precision',round(precision_score(y_train, train_pred),3),\n",
+    "          '| f1',round(f1_score(y_train, train_pred),3))\n",
+    "\n",
+    "    print('Test | Accuracy:', round(accuracy_score(y_test, test_pred),3),\n",
+    "          '| Recall',round(recall_score(y_test, test_pred),3),\n",
+    "          '| Precision',round(precision_score(y_test, test_pred),3),\n",
+    "          '| f1',round(f1_score(y_test, test_pred),3))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "mnb = MultinomialNB()\n",
+    "rf = RandomForestClassifier()\n",
+    "svc = SVC()\n",
+    "ada = AdaBoostClassifier()\n",
+    "sgdc = SGDClassifier()\n",
+    "logit = LogisticRegression()"
    ]
   },
   {
@@ -68,7 +275,112 @@
    },
    "outputs": [],
    "source": [
-    "user.head()"
+    "fit_model(svc, vect_X_train, y_train,vect_X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SGDClassifier :\n",
+      "Train | Accuracy: 0.747 | Recall 0.004 | Precision 0.881 | f1 0.009\n",
+      "Test | Accuracy: 0.748 | Recall 0.005 | Precision 0.917 | f1 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "fit_model(sgdc, vect_X_train, y_train,vect_X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression :\n",
+      "Train | Accuracy: 0.804 | Recall 0.406 | Precision 0.699 | f1 0.513\n",
+      "Test | Accuracy: 0.787 | Recall 0.381 | Precision 0.631 | f1 0.475\n"
+     ]
+    }
+   ],
+   "source": [
+    "fit_model(logit, vect_X_train, y_train,vect_X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AdaBoostClassifier :\n",
+      "Train | Accuracy: 0.765 | Recall 0.278 | Precision 0.578 | f1 0.376\n",
+      "Test | Accuracy: 0.764 | Recall 0.271 | Precision 0.57 | f1 0.368\n"
+     ]
+    }
+   ],
+   "source": [
+    "fit_model(ada, vect_X_train, y_train,vect_X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier :\n",
+      "Train | Accuracy: 0.976 | Recall 0.905 | Precision 0.999 | f1 0.95\n",
+      "Test | Accuracy: 0.752 | Recall 0.104 | Precision 0.564 | f1 0.176\n"
+     ]
+    }
+   ],
+   "source": [
+    "fit_model(rf, vect_X_train, y_train,vect_X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultinomialNB :\n",
+      "Train | Accuracy: 0.75 | Recall 0.021 | Precision 0.823 | f1 0.041\n",
+      "Test | Accuracy: 0.747 | Recall 0.007 | Precision 0.62 | f1 0.014\n"
+     ]
+    }
+   ],
+   "source": [
+    "fit_model(mnb, vect_X_train, y_train,vect_X_test, y_test)"
    ]
   },
   {
@@ -82,6 +394,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -97,6 +418,87 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.23372122115983693"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review['elite_status'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "corpus = [\"This is very strange\",\n",
+    "          \"This is very nice\"]\n",
+    "vectorizer = TfidfVectorizer(min_df=1)\n",
+    "X = vectorizer.fit_transform(corpus)\n",
+    "idf = vectorizer.idf_\n",
+    "print dict(zip(vectorizer.get_feature_names(), idf))\n",
+    "{u'is': 1.0,\n",
+    " u'nice': 1.4054651081081644,\n",
+    " u'strange': 1.4054651081081644,\n",
+    " u'this': 1.0,\n",
+    " u'very': 1.0}"
+   ]
   },
   {
    "cell_type": "code",
@@ -840,8 +1242,7 @@
    "cell_type": "code",
    "execution_count": 224,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
