--- a/2_Data-Cleaning.ipynb
+++ b/2_Data-Cleaning.ipynb
@@ -14,8 +14,8 @@
     "## Goal\n",
     "1. Rename columns\n",
     "2. Reset Index\n",
-    "3. Get Restaurant Reviews + Businesses only\n",
-    "5. Clean Text ( lower , lemmatizing , remove punctuation )\n",
+    "3. Filter Reviews + Businesses dataset to include Restaurants only\n",
+    "5. Preprocssing Text Data ( lower characters, remove stop words, lemmatizing , remove punctuation )\n",
     "5. Add Features to User Panda Frame\n",
     "    - Elite Status --- 1: Yes 0:No\n",
     "    - Add total user compliments \n",
@@ -1220,13 +1220,6 @@
    ],
    "source": [
     "tip.head(1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Minor Tweak"
    ]
   },
   {
