--- a/2_Data-Cleaning.ipynb
+++ b/2_Data-Cleaning.ipynb
@@ -375,7 +375,7 @@
    },
    "outputs": [],
    "source": [
-    "restaurant_review['text'] = restaurant_review.text.apply(clean_text) #2/;24"
+    "restaurant_review['text'] = restaurant_review.text.apply(clean_text) "
    ]
   },
   {
