--- a/3_Classification-On-User-Info.ipynb
+++ b/3_Classification-On-User-Info.ipynb
@@ -920,39 +920,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# rf_confusion = confusion_matrix(y_test_1, all_rf_pred )\n",
-    "# ada_confusion = confusion_matrix(y_test_1, all_ada_pred )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# show_confusion_matrix(rf_confusion,class_labels=[\"Non-Elite\", \"Elite\"])\n",
-    "# show_confusion_matrix(ada_confusion,class_labels=[\"Non-Elite\", \"Elite\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# plot_roc(y_test_1, all_rf_prob )\n",
-    "# plot_roc(y_test_1, all_ada_prob )"
+    "### Overall, I get better predictive power using all features. Features that indicate quality of texts ( votes_cool, votes_useful, compliments_writer, compliments_hot ) ranked higher than the rest. Review count are also taken seriously in terms of qualify an Elite user. On the other side, number of friends and number of tips given are less meaningful predictors. "
    ]
   },
   {
@@ -961,7 +932,9 @@
    "source": [
     "# Different dataset\n",
     "\n",
-    "> ## We see earlier that number of reviews is a good indicator for elite users. If increasing the threshold for user reviews, I want to test how good the model predicts for elite status. "
+    "> ## Review count is reported the be number one predictor for elite status. \n",
+    "\n",
+    ">## I want to test predictive power of models given review count per person is to be at least 50 , which will give balance for classes"
    ]
   },
   {
@@ -1137,7 +1110,7 @@
    "execution_count": 104,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1170,7 +1143,8 @@
    "cell_type": "code",
    "execution_count": 112,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1185,6 +1159,20 @@
    ],
    "source": [
     "esb_pred = fit_model(esb,features, X_train_40,y_train_40, X_test_40, y_test_40) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest gives a better accuracy score and recall percentage ( abilitly to retrieve elite users correctly out of all elite users ) . Also, it has higher number of False Positive in which I dont mind. Those misclassififed negative users can potentially become elite users if be nominated. Yelp can keep a list of these userIDs and send them encouragements to boost their activities on the server. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For feature importance, we see that votes and compliments ranked higher than review counts and other attributes indicate that Yelp value activities or time on sites heavily when considering for Elite Status, which is a good method to incentivize user engagement on Yelp Website."
    ]
   },
   {
@@ -1275,6 +1263,15 @@
    "source": [
     "plot_roc(y_test_40, rf_prob_40 )\n",
     "plot_roc(y_test_40, ada_prob_40 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "#### Both Ada Boost Classfier and Random Forest have decently high auc. "
    ]
   },
   {
