--- a/4_Text-Classfication.ipynb
+++ b/4_Text-Classfication.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -570,8 +570,8 @@
      "output_type": "stream",
      "text": [
       "LogisticRegression :\n",
-      "Train | Accuracy: 0.83 | Recall 0.322 | Precision 0.816 | f1 0.462\n",
-      "Test | Accuracy: 0.793 | Recall 0.252 | Precision 0.641 | f1 0.362\n"
+      "Train | Accuracy: 0.83 | Recall 0.321 | Precision 0.815 | f1 0.461\n",
+      "Test | Accuracy: 0.795 | Recall 0.265 | Precision 0.638 | f1 0.374\n"
      ]
     }
    ],
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -592,8 +592,8 @@
      "output_type": "stream",
      "text": [
       "AdaBoostClassifier :\n",
-      "Train | Accuracy: 0.821 | Recall 0.351 | Precision 0.711 | f1 0.47\n",
-      "Test | Accuracy: 0.786 | Recall 0.28 | Precision 0.584 | f1 0.378\n"
+      "Train | Accuracy: 0.821 | Recall 0.357 | Precision 0.71 | f1 0.476\n",
+      "Test | Accuracy: 0.79 | Recall 0.286 | Precision 0.594 | f1 0.386\n"
      ]
     }
    ],
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -615,10 +615,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -627,16 +627,48 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.81      0.96      0.88      5001\n",
-      "          1       0.64      0.25      0.36      1522\n",
+      "          0       0.81      0.95      0.88      5015\n",
+      "          1       0.64      0.26      0.37      1508\n",
       "\n",
-      "avg / total       0.77      0.79      0.76      6523\n",
+      "avg / total       0.77      0.80      0.76      6523\n",
       "\n"
      ]
     }
    ],
    "source": [
     "print(classification_report(y_test, logit_test_pred ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.81      0.94      0.87      5015\n",
+      "          1       0.59      0.29      0.39      1508\n",
+      "\n",
+      "avg / total       0.76      0.79      0.76      6523\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, ada_test_pred ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Although logistic regression gives better accuracy score, I will choose Ada Boost Classfier since it gives a better recall rate and f1 score ( which is more important since I want to be able to retrieve elite user correctly  ) "
    ]
   },
   {
@@ -713,13 +745,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Logistic Regression and Ada Boost Classfiers give decent auc score"
+   ]
   },
   {
    "cell_type": "code",
